apps/media/bazarr/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: bazarr
  namespace: media
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Bazarr
    gethomepage.dev/description: Subtitle management
    gethomepage.dev/group: Media
    gethomepage.dev/icon: bazarr.png
    gethomepage.dev/href: https://bazarr.${SECRET_DOMAIN}
    gethomepage.dev/widget.type: bazarr
    gethomepage.dev/widget.url: http://bazarr.media:6767
    gethomepage.dev/widget.key: "${SECRET_BAZARR_API_KEY}"
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`bazarr.${SECRET_DOMAIN}`)
      kind: Rule
      services:
        - name: bazarr
          port: 6767
      middlewares:
        - name: trusted-only
          namespace: kube-system
        - name: redirect-to-https
          namespace: kube-system
